# orca

./: .gitignore  LICENSE  README  babel.config.json  orca.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
orca/: __init__.py  __main__.py  _config.py  _helpers.py  app.py  cli.py  config.py  configuration.py  helpers.py  server.py  wsgi.py
orca-www/: index.html
orca-www/css/: styles.css  styles.css.map
orca-www/scss/: main.scss
orca-www/src/js/: api.js  config.js  helpers.js  main.js  state.js  ui.js
orca/model/: __init__.py  base.py  corpus.py  db.py  document.py  documents.py  megadoc.py  results.py  search.py
orca/tasks/: __init__.py  celery.py  corpus.py  exporter.py  exporters.py  importer.py  load.py  loaders.py  search.py  searcher.py  searchers.py
orca_api/: __main__.py  config.py  server.py  tasks_old.py
orca_api/model/: __init__.py  db.py  documents.py  results.py
orca_api/tasks/: __init__.py  controller.py  load.py
orca_www/: index.html  orca.js  styles.css
orca_www/css/: styles.css
orca_www/src/: main.js
orca_www/src/js/: api.js  helpers.js  main.js  state.js  ui.js
tests/: conftest.py  test_db.py
tests/orca/: conftest.py  test_model_corpus.py  test_model_document.py  test_model_search.py  test_tasks_exporters.py  test_tasks_importers.py  test_tasks_searchers.py
www/src/: index.html
www/src/js/: main.js  state.js  ui.js
www/src/scss/: main.scss
www/static/css/: styles.css
